--- a/09-26/index.html
+++ b/09-26/index.html
@@ -183,7 +183,7 @@
         <h1 class="atencao">Horário bugado ON</h1>
         <div class="bloco-msg">
             <div id="img-msg"></div>
-            <p id="msg">Tá pagando muito! &#129297;&#129297;&#129297;</p>
+            <p id="msg">Tá pagando muito! &#129297;&#129297;</p>
         </div>
         <p id="novidade">Novidade! Use o bolsa família e concorra a 10% de cashback!</p>
         <div id="tigrinho"></div>
