--- a/09-26/index.html
+++ b/09-26/index.html
@@ -165,11 +165,20 @@
             align-items: center;
             width: 100%;
         }
+
+        #slogan {
+            display: flex;
+            flex-direction: column;
+            font-size: larger;
+            align-items: center;
+            padding-bottom: 15px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1><span id="verde">IF</span>bet</h1>
+        <p id="slogan">Investimento para todos!</p>
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
@@ -196,6 +205,6 @@
         Recusandae molestiae fuga error necessitatibus dolore nobis ratione repellendus rem, dicta a? Eaque ab voluptatem vero. Nostrum, consequuntur quisquam eaque alias harum sequi, distinctio aliquid quae fuga voluptas, qui quia.
         Mollitia in voluptatibus ipsum. Veniam, incidunt soluta fugiat exercitationem minus necessitatibus sed reprehenderit blanditiis voluptates est sit at laudantium, dolorum quibusdam? Dicta reprehenderit minus omnis. Iusto, qui. Dolorum, perspiciatis porro.</p>
     </main>
-    <footer><p>IFbet: Investimento para todos!</p></footer>
+    <footer><p>2024 IFbet: Investimento para todos!</p></footer>
 </body>
 </html>
