--- a/06-29-exercicios-html/exercicios/receita.html
+++ b/06-29-exercicios-html/exercicios/receita.html
@@ -27,7 +27,7 @@
         
     <div id="preparo">
         <h2>Ingredientes (8 porções)</h2>
-        <h3>Massa</h3>
+        <h3 id="h3-preparo">Massa</h3>
         <ul>
             <li>1/2 xícara (chá) de óleo</li>
             <li>4 ovos</li>
