--- a/aula-14-11/index.html
+++ b/aula-14-11/index.html
@@ -69,8 +69,10 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/tI-5uv4wryI?si=W-Gq0XncbCk3p620" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="wrap-bloco">
-                <div>
-                    <div id="img-noel-liam"></div>
+                <div class="bloco">
+                    <div>
+                        <div id="img-noel-liam"></div>
+                    </div>
                 </div>
                 <div class="bloco">
                     <p id="fonte-branca">Noel Gallagher é um mestre da melodia, com um catálogo que inclui clássicos como "Rock 'n' Roll Star", "Live Forever",
