--- a/aula-14-11/index.html
+++ b/aula-14-11/index.html
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer>
-        <p>2024</p>
+        <p>Site criado por <a href="https://github.com/gustavo022223" target="_blank">gustavo022223</a></p>
     </footer>
 </body>
 </html>
