--- a/aula-14-11/pages/discografia.html
+++ b/aula-14-11/pages/discografia.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oasis</title>
+    <title>oasis: Discografia</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../oasis-fav-180x180.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -17,22 +18,80 @@
         </nav>
     </header>
     <main>
+        <h1>Discografia</h1>
         <section>
-            <!-- <div class="bloco">
-                <div id="img-personalidade">
+            <div class="wrap-bloco-album">
+                <div class="bloco-album">
+                    <div class="capa-album" id="definitely-maybe"></div>
+                    <p>Título: Definitely Maybe</p>
+                    <p>Ano de lançamento: 1994</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/50xG9YujTzMGaLHfJTskBy?si=LL0v1lzmRtC6TnidbFYNNA" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_kReb2T0xmcylkA8g23JoAbUhfSXIaZ02M&si=XESHDvyX2FDnyZNI" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
+
+                <div class="bloco-album">
+                    <div class="capa-album" id="whats-the-story"></div>
+                    <p>Título: (What’s The Story) Morning Glory?</p>
+                    <p>Ano de lançamento: 1995</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/1VW1MFNstaJuygaoTPkdCk?si=18t_3Cw7Rx27_GH-5UkwrQ" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_lGQfnMNGvYCRdDq9ZLzJV2BJL2aHQsz9Y&si=nS3KjbmMNdJN2h_b" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
+
+                <div class="bloco-album">
+                    <div class="capa-album" id="be-here-now"></div>
+                    <p>Título: Be Here Now</p>
+                    <p>Ano de lançamento: 1997</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/album/4v3p8Xcv94Z7YAtlurC9Zi?si=5SuPd8a9SUyNI4KelCwpmA" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_kij0Um78FWtmec2JkFcdUcbwD7TQ7_XaI&si=nBDaXZRkc6KLVrk9" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
                 </div>
             </div>
-            <div class="bloco">
-                <p>Lorem</p>
-            </div> -->
 
-            <table>
+            <div class="wrap-bloco-album">
+                <div class="bloco-album">
+                    <div class="capa-album" id="standing"></div>
+                    <p>Título: Standing On The Shoulder Of Giants</p>
+                    <p>Ano de lançamento: 2000</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/22ZTL8tB7bhhAVrLJBIO9H?si=dJGnAf2nT06GZunWvV4lPw" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_mgMw8a_badAdsaMtKyNkWQ4-qqGO8bjyM&si=u0Ac3LMEa1JW-PJC" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
 
-            </table>
+                <div class="bloco-album">
+                    <div class="capa-album" id="heaten-chemistry"></div>
+                    <p>Título: Heathen Chemistry</p>
+                    <p>Ano de lançamento: 2002</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/album/4mMan8IGNJUhZ6du15ki5T?si=m2lppffcSuCTcDEPH7S4iQ" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_l56fmU68W_oKKSJUeyXYgPkYcHuBdGHMo&si=DkebyOgd2g-syzHm" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
+
+                <div class="bloco-album">
+                    <div class="capa-album" id="dont-believe"></div>
+                    <p>Título: Don’t Believe The Truth</p>
+                    <p>Ano de lançamento: 2005</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/album/56VuARmradZgJcSaVucTWn?si=tMgUX4xBRwWjSJTA30qqPQ" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_nPH5YHnp-6aVQ7z3HmwSkVxDA72MqXCjA&si=nar0nms2HWm_AZL9" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="wrap-bloco-album">
+                <div class="capa-album" id="dig-out"></div>
+                <div class="bloco-album">
+                    <p>Título: Dig Out Your Soul</p>
+                    <p>Ano de lançamento: 2008</p>
+                    <p>Ouvir: <a href="https://open.spotify.com/album/75KnF13DIx7GXfz5IesWtT?si=tlHXLuQwTg6SD3ZAp6fzIA" target="_blank" rel="noopener noreferrer">Spotify</a>
+                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_n2nyc5jWxXaikzvdjzRoEGpmqAX2PtI7A&si=YffO7X9xrK94ryd6" target="_blank" rel="noopener noreferrer">Youtube Music</a>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Site criado por <a href="https://github.com/gustavo022223" target="_blank">gustavo022223</a></p>
     </footer>
 </body>
 </html>
