--- a/aula-14-11/index.html
+++ b/aula-14-11/index.html
@@ -8,101 +8,15 @@
     <link rel="shortcut icon" href="oasis-fav-180x180.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <h1 id="nome-banda">oasis</h1>
-        <nav>
-            <a href="index.html">História</a>
-            <a href="./pages/discografia.html">Discografia</a>
-            <a href="./pages/premios-e-indicacoes.html">Prêmios e indicações</a>
-            <a href="./pages/redes-sociais.html">Redes sociais</a>
-        </nav>
+    <header id="header-pagina-inicial">
+        <a href="index.html"><h1 class="nome-banda">oasis</h1></a>
     </header>
     <main>
-        <h1>História</h1>
-        <section>
-            <div class="wrap-bloco">
-                <div class="bloco">
-                    <div id="img-personalidade">
-                    </div>
-                </div>
-                <div class="bloco">
-                    <p id="fonte-branca">Quando "Some Might Say" se tornou o primeiro single número um do Oasis em abril de 1995, marcou a metade
-                        de um período de dois anos em que a banda passou de pouco conhecida em Manchester, tocando em pequenos fundos
-                        de pubs, para alcançar o status de banda de rock 'n' roll mais culturalmente significativa das últimas três
-                        décadas.</p>
-                    <p id="fonte-branca">Apenas 12 meses antes, eles haviam lançado seu single de estreia, "Supersonic".</p>
-                    <iframe width="500" height="281" src="https://www.youtube.com/embed/BJKpUH2kJQg?si=lenVbunDzW_vHcKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="bloco">
-                <p>Na mesma época, em 1996, o Oasis estava se apresentando para 250 mil fãs ao longo de duas noites no Knebworth Park, 
-                    no Reino Unido, enquanto o álbum "(What's The Story) Morning Glory?" estava a caminho de se tornar o quinto álbum 
-                    mais vendido de todos os tempos na Grã-Bretanha.</p>
-                <p>Mas, mais importante do que ingressos ou discos vendidos, suas maiores músicas — como "Wonderwall", "Don’t Look Back In Anger" 
-                    e "Champagne Supernova" — são canções cujas letras vastas partes do planeta conhecem palavra por palavra.</p>
-            </div>
-            <div class="bloco">
-                <iframe width="500" height="281" src="https://www.youtube.com/embed/6hzrDeceEKc?si=_vE3Aj0so6GMgTX5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div class="wrap-bloco">
-                <div class="bloco">
-                    <iframe width="500" height="281" src="https://www.youtube.com/embed/r8OipmKFDeM?si=A21NbZLh0BNQP0My" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-                <div class="bloco">
-                    <p id="fonte-branca">Músicas que pareciam ganhar vida própria no instante em que foram lançadas e cujo poder não diminuiu mais de um quarto de 
-                        século depois. Canções que continuarão a existir muito tempo após todos os envolvidos em sua criação terem partido.</p>
-                    <p id="fonte-branca">Músicas que continuam a inspirar geração após geração de compositores a pegar um violão acústico e tentar tocar as 
-                        pessoas da mesma maneira.</p>
-                    <p id="fonte-branca">Porque o Oasis encapsula o glamour, o sonho, o drama, a atitude e a emoção de ser uma estrela do rock 'n' roll melhor do 
-                        que qualquer um dos inúmeros artistas que vieram depois deles. Todos, mesmo aqueles que nem tinham nascido quando a 
-                        banda surgiu, os citam como uma influência direta.</p>
-                </div>
-            </div>
-            <div class="bloco">
-                <p>Liam Gallagher é um vocalista e líder que rivaliza com os maiores de todos os tempos. Ele é descrito como "o último de 
-                    sua espécie", com uma voz que combina atitude e alma, além de uma presença marcante que muitos tentaram, mas não conseguiram 
-                    imitar. O álbum Standing on the Shoulder of Giants, cuja capa traz o icônico logo do Oasis sobre a silhueta do Empire State 
-                    Building em Nova York, marcou outro momento significativo na trajetória da banda, refletindo tanto a grandeza quanto o 
-                    estilo único de Liam e do Oasis.</p>
-            </div>
-            <div class="bloco">
-                <iframe width="500" height="281" src="https://www.youtube.com/embed/tI-5uv4wryI?si=W-Gq0XncbCk3p620" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div class="wrap-bloco">
-                <div class="bloco">
-                    <div>
-                        <div id="img-noel-liam"></div>
-                    </div>
-                </div>
-                <div class="bloco">
-                    <p id="fonte-branca">Noel Gallagher é um mestre da melodia, com um catálogo que inclui clássicos como "Rock 'n' Roll Star", "Live Forever",
-                        "Stop Crying Your Heart Out" e "The Importance Of Being Idle". Suas composições podem rivalizar com as de qualquer outro
-                        compositor da história. Ele possui um talento único e especial para se conectar com as pessoas por meio de suas músicas,
-                        que continuam sendo referência para fãs e artistas ao redor do mundo.
-                        A capa de Heathen Chemistry, com uma imagem borrada da banda em um túnel iluminado, reflete a energia e a estética
-                        característica do Oasis durante esse período.</p>
-                    <p id="fonte-branca">A conexão do Oasis com o público durante seus 18 anos de carreira ultrapassou as fronteiras de seu país natal, o Reino Unido.
-                        Desde sua primeira turnê internacional no Japão em 1994, até os shows no Madison Square Garden em Nova York em 2005 e no Estádio
-                        River Plate em Buenos Aires em 2009, a banda sempre demonstrou como sua atitude, energia e a alma de suas músicas conseguiam
-                        tocar pessoas de diferentes culturas e idiomas.
-                        Essa universalidade, que transcende barreiras linguísticas, foi uma das razões do imenso sucesso internacional do Oasis, com
-                        suas músicas conectando-se com os fãs de maneira profunda, independentemente da língua falada.</p>
-                </div>
-            </div>
-            <div class="bloco">
-                <p>Até sua separação em 2009, o Oasis continuou a conquistar o mundo, com shows em estádios lotados de fãs de todas as idades, 
-                    desde a América do Sul e do Norte até a Europa, Austrália e além. Desde os primeiros dias, Liam e Noel Gallagher foram francos 
-                    sobre suas ambições: queriam escrever músicas melhores, vender mais discos e tocar em shows maiores que qualquer outra banda. 
-                    Mais importante ainda, queriam deixar um legado que fosse significativo para as pessoas, assim como as bandas que os inspiraram 
-                    quando eram jovens sonhadores de classe trabalhadora.
-
-                    O álbum Dig Out Your Soul encapsula esse espírito, com uma capa que mistura as mãos segurando uma explosão nuclear, simbolizando 
-                    o poder de sua música e ambições desmedidas. E de fato, o Oasis conseguiu criar algo eterno, cujas músicas continuam a ressoar 
-                    décadas depois de sua formação</p>
-            </div>
-            <div class="bloco">
-                <div id="img-banda"></div>
-            </div>
+        <section class="menu">
+                <a href="./pages/historia.html"><div class="bloco-menu img-menu img-menu--historia"><span id="texto-menu"><h1>História</h1></span></div></a>
+                <a href="./pages/discografia.html"><div class="bloco-menu img-menu img-menu--discografia"><span id="texto-menu"><h1>Discografia</h1></span></div></a>
+                <a href="./pages/premios-e-indicacoes.html"><div class="bloco-menu img-menu img-menu--premios"><span id="texto-menu"><h1>Prêmios e indicações</h1></span></div></a>
+                <a href="./pages/redes-sociais.html"><div class="bloco-menu img-menu img-menu--redes-sociais"><span id="texto-menu"><h1>Redes sociais</h1></span></div></a>
         </section>
     </main>
     <footer>
