--- a/aula-14-11/pages/premios-e-indicacoes.html
+++ b/aula-14-11/pages/premios-e-indicacoes.html
@@ -3,36 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oasis</title>
+    <title>oasis: Prêmios e indicações</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../oasis-fav-180x180.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1 id="nome-banda">oasis</h1>
+        <a href="../index.html"><h1 class="nome-banda">oasis</h1></a>
         <nav>
-            <a href="../index.html">História</a>
+            <a href="historia.html">História</a>
             <a href="discografia.html">Discografia</a>
             <a href="premios-e-indicacoes.html">Prêmios e indicações</a>
             <a href="redes-sociais.html">Redes sociais</a>
         </nav>
     </header>
     <main>
+        <h1>Prêmios e indicações</h1>
         <section>
-            <!-- <div class="bloco">
-                <div id="img-personalidade">
-                </div>
-            </div>
-            <div class="bloco">
-                <p>Lorem</p>
-            </div> -->
-
             <table>
-
+                <thead>
+                    <tr>
+                        <th class="fundo-preto">Prêmio</th>
+                        <td class="fundo-preto">Vitórias</td>
+                        <td class="fundo-preto">Indicações</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Brit</th>
+                        <td class="fundo-verde">6</td>
+                        <td class="fundo-vermelho">17</td>
+                    </tr>
+                    <tr>
+                        <th>Grammy</th>
+                        <td class="fundo-verde">0</td>
+                        <td class="fundo-vermelho">3</td>
+                    </tr>
+                    <tr>
+                        <th>Ivor Novello</th>
+                        <td class="fundo-verde">2</td>
+                        <td class="fundo-vermelho">3</td>
+                    </tr>
+                    <tr>
+                        <th>MTV Asia</th>
+                        <td class="fundo-verde">0</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                    <tr>
+                        <th>MTV Europe</th>
+                        <td class="fundo-verde">4</td>
+                        <td class="fundo-vermelho">4</td>
+                    </tr>
+                    <tr>
+                        <th>MTV Japan</th>
+                        <td class="fundo-verde">1</td>
+                        <td class="fundo-vermelho">4</td>
+                    </tr>
+                    <tr>
+                        <th>NME</th>
+                        <td class="fundo-verde">17</td>
+                        <td class="fundo-vermelho">26</td>
+                    </tr>
+                    <tr>
+                        <th>Q</th>
+                        <td class="fundo-verde">9</td>
+                        <td class="fundo-vermelho">19</td>
+                    </tr>
+                    <tr>
+                        <th>Top of the Pops Awards</th>
+                        <td class="fundo-verde">1</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                    <tr>
+                        <th>Vodafone Live Music Awards</th>
+                        <td class="fundo-verde">1</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                    <tr>
+                        <th>Mercury Prize</th>
+                        <td class="fundo-verde">0</td>
+                        <td class="fundo-vermelho">2</td>
+                    </tr>
+                    <tr>
+                        <th>NME Awards USA</th>
+                        <td class="fundo-verde">0</td>
+                        <td class="fundo-vermelho">2</td>
+                    </tr>
+                    <tr>
+                        <th>Silver Clef Awards</th>
+                        <td class="fundo-verde">1</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                    <tr>
+                        <th>UK Video Music Awards</th>
+                        <td class="fundo-verde">2</td>
+                        <td class="fundo-vermelho">4</td>
+                    </tr>
+                    <tr>
+                        <th>UK Festival Awards</th>
+                        <td class="fundo-verde">0</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                    <tr>
+                        <th>Music for the Mases community VS</th>
+                        <td class="fundo-verde">1</td>
+                        <td class="fundo-vermelho">1</td>
+                    </tr>
+                </tbody>
             </table>
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Site criado por <a href="https://github.com/gustavo022223" target="_blank">gustavo022223</a></p>
     </footer>
 </body>
 </html>
