--- a/aula-14-11/pages/redes-sociais.html
+++ b/aula-14-11/pages/redes-sociais.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oasis</title>
+    <title>oasis: Redes sociais</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../oasis-fav-180x180.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1 id="nome-banda">oasis</h1>
+        <a href="../index.html"><h1 class="nome-banda">oasis</h1></a>
         <nav>
-            <a href="../index.html">História</a>
+            <a href="historia.html">História</a>
             <a href="discografia.html">Discografia</a>
             <a href="premios-e-indicacoes.html">Prêmios e indicações</a>
             <a href="redes-sociais.html">Redes sociais</a>
         </nav>
     </header>
     <main>
+        <h1>Redes sociais</h1>
         <section>
-            <!-- <div class="bloco">
-                <div id="img-personalidade">
-                </div>
-            </div>
-            <div class="bloco">
-                <p>Lorem</p>
-            </div> -->
-
-            <table>
-
-            </table>
+           <div id="bloco-redes">
+                <a href="https://www.instagram.com/oasis/" class="link"><img src="https://img.icons8.com/?size=100&id=84884&format=png&color=000000" alt="Instagram">Instagram</a>
+                <a href="https://www.tiktok.com/@oasis" class="link"><img src="https://img.icons8.com/?size=100&id=juS4pYkbvSCh&format=png&color=000000" alt="TikTok"> TikTok</a>
+                <a href="https://twitter.com/oasis" class="link"><img src="https://img.icons8.com/?size=100&id=102907&format=png&color=000000" alt="Twitter"> Twitter</a>
+                <a href="https://www.facebook.com/OasisOfficial" class="link"><img src="https://img.icons8.com/?size=100&id=84872&format=png&color=000000" alt="Facebook">Facebook</a>
+                <a href="https://www.youtube.com/channel/UCUDVBtnOQi4c7E8jebpjc9Q" class="link"><img src="https://img.icons8.com/?size=100&id=84909&format=png&color=000000" alt="Youtube">Youtube</a>
+           </div>
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Site criado por <a href="https://github.com/gustavo022223" target="_blank">gustavo022223</a></p>
     </footer>
 </body>
 </html>
