--- a/aula-14-11/pages/discografia.html
+++ b/aula-14-11/pages/discografia.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1 id="nome-banda">oasis</h1>
+        <a href="../index.html"><h1 class="nome-banda">oasis</h1></a>
         <nav>
-            <a href="../index.html">História</a>
+            <a href="historia.html">História</a>
             <a href="discografia.html">Discografia</a>
             <a href="premios-e-indicacoes.html">Prêmios e indicações</a>
             <a href="redes-sociais.html">Redes sociais</a>
@@ -19,74 +19,119 @@
     </header>
     <main>
         <h1>Discografia</h1>
-        <section>
+        <section id="discografia">
             <div class="wrap-bloco-album">
-                <div class="bloco-album">
-                    <div class="capa-album" id="definitely-maybe"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--definitely-maybe"></div>
                     <p>Título: Definitely Maybe</p>
                     <p>Ano de lançamento: 1994</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/50xG9YujTzMGaLHfJTskBy?si=LL0v1lzmRtC6TnidbFYNNA" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_kReb2T0xmcylkA8g23JoAbUhfSXIaZ02M&si=XESHDvyX2FDnyZNI" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/intl-pt/album/50xG9YujTzMGaLHfJTskBy?si=LL0v1lzmRtC6TnidbFYNNA" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kReb2T0xmcylkA8g23JoAbUhfSXIaZ02M&si=XESHDvyX2FDnyZNI" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
 
-                <div class="bloco-album">
-                    <div class="capa-album" id="whats-the-story"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--whats-the-story"></div>
                     <p>Título: (What’s The Story) Morning Glory?</p>
                     <p>Ano de lançamento: 1995</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/1VW1MFNstaJuygaoTPkdCk?si=18t_3Cw7Rx27_GH-5UkwrQ" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_lGQfnMNGvYCRdDq9ZLzJV2BJL2aHQsz9Y&si=nS3KjbmMNdJN2h_b" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/intl-pt/album/1VW1MFNstaJuygaoTPkdCk?si=18t_3Cw7Rx27_GH-5UkwrQ" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_lGQfnMNGvYCRdDq9ZLzJV2BJL2aHQsz9Y&si=nS3KjbmMNdJN2h_b" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
 
-                <div class="bloco-album">
-                    <div class="capa-album" id="be-here-now"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--be-here-now"></div>
                     <p>Título: Be Here Now</p>
                     <p>Ano de lançamento: 1997</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/album/4v3p8Xcv94Z7YAtlurC9Zi?si=5SuPd8a9SUyNI4KelCwpmA" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_kij0Um78FWtmec2JkFcdUcbwD7TQ7_XaI&si=nBDaXZRkc6KLVrk9" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
-            </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/album/4v3p8Xcv94Z7YAtlurC9Zi?si=5SuPd8a9SUyNI4KelCwpmA" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_kij0Um78FWtmec2JkFcdUcbwD7TQ7_XaI&si=nBDaXZRkc6KLVrk9" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
 
-            <div class="wrap-bloco-album">
-                <div class="bloco-album">
-                    <div class="capa-album" id="standing"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--standing"></div>
                     <p>Título: Standing On The Shoulder Of Giants</p>
                     <p>Ano de lançamento: 2000</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/intl-pt/album/22ZTL8tB7bhhAVrLJBIO9H?si=dJGnAf2nT06GZunWvV4lPw" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_mgMw8a_badAdsaMtKyNkWQ4-qqGO8bjyM&si=u0Ac3LMEa1JW-PJC" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/intl-pt/album/22ZTL8tB7bhhAVrLJBIO9H?si=dJGnAf2nT06GZunWvV4lPw" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_mgMw8a_badAdsaMtKyNkWQ4-qqGO8bjyM&si=u0Ac3LMEa1JW-PJC" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
 
-                <div class="bloco-album">
-                    <div class="capa-album" id="heaten-chemistry"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--heaten-chemistry"></div>
                     <p>Título: Heathen Chemistry</p>
                     <p>Ano de lançamento: 2002</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/album/4mMan8IGNJUhZ6du15ki5T?si=m2lppffcSuCTcDEPH7S4iQ" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_l56fmU68W_oKKSJUeyXYgPkYcHuBdGHMo&si=DkebyOgd2g-syzHm" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/album/4mMan8IGNJUhZ6du15ki5T?si=m2lppffcSuCTcDEPH7S4iQ" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_l56fmU68W_oKKSJUeyXYgPkYcHuBdGHMo&si=DkebyOgd2g-syzHm" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
 
-                <div class="bloco-album">
-                    <div class="capa-album" id="dont-believe"></div>
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--dont-believe"></div>
                     <p>Título: Don’t Believe The Truth</p>
                     <p>Ano de lançamento: 2005</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/album/56VuARmradZgJcSaVucTWn?si=tMgUX4xBRwWjSJTA30qqPQ" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_nPH5YHnp-6aVQ7z3HmwSkVxDA72MqXCjA&si=nar0nms2HWm_AZL9" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="wrap-bloco-album">
-                <div class="capa-album" id="dig-out"></div>
-                <div class="bloco-album">
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/album/56VuARmradZgJcSaVucTWn?si=tMgUX4xBRwWjSJTA30qqPQ" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_nPH5YHnp-6aVQ7z3HmwSkVxDA72MqXCjA&si=nar0nms2HWm_AZL9" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
+            
+                <article class="bloco-album">
+                    <div class="capa-album capa-album--dig-out"></div>
                     <p>Título: Dig Out Your Soul</p>
                     <p>Ano de lançamento: 2008</p>
-                    <p>Ouvir: <a href="https://open.spotify.com/album/75KnF13DIx7GXfz5IesWtT?si=tlHXLuQwTg6SD3ZAp6fzIA" target="_blank" rel="noopener noreferrer">Spotify</a>
-                    <a href="https://music.youtube.com/playlist?list=OLAK5uy_n2nyc5jWxXaikzvdjzRoEGpmqAX2PtI7A&si=YffO7X9xrK94ryd6" target="_blank" rel="noopener noreferrer">Youtube Music</a>
-                    </p>
-                </div>
+                    <div class="link-imagem">
+                        <p>Ouvir: 
+                            <a href="https://open.spotify.com/album/75KnF13DIx7GXfz5IesWtT?si=tlHXLuQwTg6SD3ZAp6fzIA" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_spotify_onlight.svg" alt="Ouvir no Spotify">
+                            </a>
+                            <a href="https://music.youtube.com/playlist?list=OLAK5uy_n2nyc5jWxXaikzvdjzRoEGpmqAX2PtI7A&si=YffO7X9xrK94ryd6" target="_blank" rel="noopener noreferrer">
+                                <img src="https://services.linkfire.com/logo_youtubemusic_onlight.svg" alt="Ouvir no YouTube Music">
+                            </a>
+                        </p>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
