--- a/aula-14-11/index.html
+++ b/aula-14-11/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oasis: História</title>
+    <title>oasis: Página inicial</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="oasis-fav-180x180.png" type="image/x-icon">
 </head>
